--- a/views/scheduling.html
+++ b/views/scheduling.html
@@ -349,7 +349,7 @@
                     type="number"
                     class="form-control"
                     id="editSeats"
-                    readonly
+                    required
                   />
                 </div>
               </div>
