--- a/views/allreservations.html
+++ b/views/allreservations.html
@@ -108,6 +108,10 @@
             <option value="">All Buses</option>
             <!-- Bus numbers will be dynamically populated here -->
           </select>
+          <label for="fromDate">From:</label>
+          <input type="date" id="fromDate">
+          <label for="toDate">To:</label>
+          <input type="date" id="toDate">
         </div>
         <table id="busReservation" class="table table-bordered">
           <thead>
