--- a/views/notifications.html
+++ b/views/notifications.html
@@ -113,11 +113,18 @@
         <div class="tab-content">
           <div class="tab-pane fade show active" id="busupdates">
             <div id="busnotifications"></div>
+            <nav aria-label="Bus Updates Pagination">
+              <ul class="pagination justify-content-center" id="busPagination"></ul>
+            </nav>
           </div>
           <div class="tab-pane fade" id="inspections">
             <div id="inspectionnotifications"></div>
+            <nav aria-label="Inspection Notifications Pagination">
+              <ul class="pagination justify-content-center" id="inspectionPagination"></ul>
+            </nav>
           </div>
         </div>
+        
 
         <nav aria-label="Page navigation">
           <ul class="pagination justify-content-center" id="pagination"></ul>
