--- a/views/reservation.html
+++ b/views/reservation.html
@@ -119,7 +119,7 @@
               <th>From</th>
               <th>To</th>
               <!-- <th>User ID</th> -->
-              <th>Seats</th>
+              <th>Seat #</th>
               <th>Type</th>
               <th>Amount</th>
               <th>Status</th>
