subscription changes start

--- a/views/register.html
+++ b/views/register.html
@@ -60,7 +60,7 @@
 
     <div class="bg-image">
       <div class="login-card" id="registration">
-        <h2 class="login-title">Registration Form</h2>
+        <h2 class="login-title">Create your iLugan Account Now!</h2>
         <form id="signup-form">
           <div class="form-row">
             <div class="form-group col-md-6">
