--- a/views/subscriptionrenewal.html
+++ b/views/subscriptionrenewal.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Subscription Payment</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
     <link rel="icon" href="/newlogo" type="image/x-icon">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-    <script
-      src="https://kit.fontawesome.com/2a3bd9e9ce.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
-</head>
-<body>
-    
-</body>
+    <title>Log in</title>
+    <link rel="stylesheet" href="/subscss" />
+  </head>
+  <body>
+    <div class="header">
+      <img src="/logo1" alt="Logo" class="logo" />
+      <h1 class="system-title">
+        ILugan: An Intelligent Ultrasonic Sensor Fleet Management System and
+        Seat Reservation for Bus Transportation Companies
+      </h1>
+    </div>
+    <div class="bg-image">
+      <h1>Your subscription has ended</h1><br>
+      <h2 id="subst">Your annual subscription of our system has ended</h2>
+      <h2>You need to pay for your subscription again to continue using the system</h2><br>
+      <button id="paybtn">Renew Subscription</button>
+    </div>
+
+    <script type="module" src="/subsrenewaljs"></script>
+    <script>
+
+    </script>
+  </body>
 </html>
