--- a/views/subscriptionrenewal.html
+++ b/views/subscriptionrenewal.html
@@ -7,12 +7,12 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-    <link rel="icon" href="/newlogo" type="image/x-icon">
+    <link rel="icon" href="/newlogo" type="image/x-icon" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <title>Log in</title>
+    <title>iLugan Subscription</title>
     <link rel="stylesheet" href="/subscss" />
   </head>
   <body>
@@ -24,15 +24,42 @@
       </h1>
     </div>
     <div class="bg-image">
-      <h1>Your subscription has ended</h1><br>
-      <h2 id="subst">Your annual subscription of our system has ended</h2>
-      <h2>You need to pay for your subscription again to continue using the system</h2><br>
-      <button id="paybtn">Renew Subscription</button>
+      <div class="container redesigned-container">
+        <div class="subscription-header">
+          <h1>Renew Your Subscription</h1>
+          <p class="subtitle">
+            Stay connected to our intelligent fleet management system.
+          </p>
+        </div>
+        <div class="subscription-content">
+          <p class="subscription-status" id="subst">
+            Your annual subscription has expired. Please renew to continue using
+            our services.
+          </p>
+          <button id="paybtn" class="renew-btn">Pay PHP 16,000</button>
+        </div>
+      </div>
+    </div>
+    <div
+      class="modal fade"
+      id="paymentModal"
+      tabindex="-1"
+      aria-labelledby="paymentModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body text-center">
+            <div class="spinner-border text-success" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+            <p class="mt-3">Payment in process...</p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script type="module" src="/subsrenewaljs"></script>
-    <script>
-
-    </script>
+    <script></script>
   </body>
 </html>
